--- a/MemeThing/Views/AddCaption.storyboard
+++ b/MemeThing/Views/AddCaption.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wv3-dL-fID">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wv3-dL-fID">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -18,7 +18,11 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hmp-WS-XX3">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
-                                <color key="backgroundColor" name="navBar"/>
+                                <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iyb-2o-7uQ">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xcm-NG-LHC" customClass="SubmitButton" customModule="MemeThing" customModuleProvider="target">
                                 <rect key="frame" x="20.5" y="792.5" width="373" height="57.5"/>
@@ -37,8 +41,8 @@
                             </textField>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nkK-uE-dFS">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <color key="tintColor" name="navBarText"/>
-                                <color key="barTintColor" name="navBar"/>
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="barTintColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <items>
                                     <navigationItem id="npf-vo-2v7">
                                         <barButtonItem key="leftBarButtonItem" title="Main Menu" id="LIn-io-HxE">
@@ -92,10 +96,13 @@
                             <constraint firstItem="nkK-uE-dFS" firstAttribute="trailing" secondItem="9G1-Tm-2X0" secondAttribute="trailing" id="17t-QN-WYx"/>
                             <constraint firstItem="9G1-Tm-2X0" firstAttribute="bottom" secondItem="xcm-NG-LHC" secondAttribute="bottom" constant="12" id="1iS-t2-Tf9"/>
                             <constraint firstItem="hmp-WS-XX3" firstAttribute="top" secondItem="gCh-mx-hlE" secondAttribute="top" id="8Gb-wj-136"/>
+                            <constraint firstAttribute="bottom" secondItem="Iyb-2o-7uQ" secondAttribute="bottom" id="8Xw-ba-gDM"/>
                             <constraint firstItem="xcm-NG-LHC" firstAttribute="height" secondItem="9G1-Tm-2X0" secondAttribute="height" multiplier="0.07" id="BS0-m4-LIn"/>
                             <constraint firstItem="2qC-42-JGe" firstAttribute="top" secondItem="hmp-WS-XX3" secondAttribute="bottom" id="Dgo-g1-U45"/>
+                            <constraint firstItem="9G1-Tm-2X0" firstAttribute="trailing" secondItem="Iyb-2o-7uQ" secondAttribute="trailing" id="GXv-df-Vtu"/>
                             <constraint firstItem="KHy-3E-I4Q" firstAttribute="top" secondItem="2qC-42-JGe" secondAttribute="bottom" id="JIm-c2-XYL"/>
                             <constraint firstItem="xcm-NG-LHC" firstAttribute="centerX" secondItem="9G1-Tm-2X0" secondAttribute="centerX" id="KcE-KI-oLj"/>
+                            <constraint firstItem="Iyb-2o-7uQ" firstAttribute="leading" secondItem="gCh-mx-hlE" secondAttribute="leading" id="NRo-eN-pZe"/>
                             <constraint firstItem="KHy-3E-I4Q" firstAttribute="centerX" secondItem="9G1-Tm-2X0" secondAttribute="centerX" id="Xqg-4h-Y1M"/>
                             <constraint firstItem="nkK-uE-dFS" firstAttribute="bottom" secondItem="hmp-WS-XX3" secondAttribute="bottom" id="YiD-qg-UWN"/>
                             <constraint firstItem="9G1-Tm-2X0" firstAttribute="trailing" secondItem="2qC-42-JGe" secondAttribute="trailing" id="cru-F3-4xN"/>
@@ -106,6 +113,7 @@
                             <constraint firstItem="KHy-3E-I4Q" firstAttribute="width" secondItem="9G1-Tm-2X0" secondAttribute="width" multiplier="0.9" id="m5D-xD-GaQ"/>
                             <constraint firstItem="xcm-NG-LHC" firstAttribute="top" secondItem="KHy-3E-I4Q" secondAttribute="bottom" constant="8" id="sb1-FW-wNU"/>
                             <constraint firstItem="xcm-NG-LHC" firstAttribute="width" secondItem="9G1-Tm-2X0" secondAttribute="width" multiplier="0.9" id="xCQ-1I-88j"/>
+                            <constraint firstItem="Iyb-2o-7uQ" firstAttribute="top" secondItem="nkK-uE-dFS" secondAttribute="bottom" id="yob-VA-UwV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9G1-Tm-2X0"/>
                         <connections>
@@ -113,6 +121,7 @@
                         </connections>
                     </view>
                     <connections>
+                        <outlet property="backgroundView" destination="Iyb-2o-7uQ" id="kl4-SP-3Yy"/>
                         <outlet property="captionTextField" destination="KHy-3E-I4Q" id="BVi-in-Bts"/>
                         <outlet property="keyboardHeightLayoutConstraint" destination="sb1-FW-wNU" id="SUa-GW-06J"/>
                         <outlet property="memeImageView" destination="7IK-AJ-lNo" id="IA8-Xi-3a1"/>
@@ -134,10 +143,7 @@
         <image name="ellipsis" catalog="system" width="128" height="37"/>
         <image name="flag" catalog="system" width="128" height="121"/>
         <namedColor name="background">
-            <color red="0.92100000381469727" green="0.92100000381469727" blue="0.92100000381469727" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="navBar">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.11372549019607843" blue="0.47843137254901963" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="navBarText">
             <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
